--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -638,7 +638,7 @@
 \def\O{\textbf{\textit{O}}}
 \newcommand{\innerproduct}[2]{\langle #1 | #2 \rangle}
 \def\mobh{\textlatin{M\"ob}({\mathbb H})}
-\def\span{span}
+%\def\span{span}
 
 %==================================== My packages ====================================
 
