--- a/References/References.bib
+++ b/References/References.bib
@@ -4072,7 +4072,17 @@ isbn="978-3-642-13190-5"
   journal = {Entropy}
 }
 
-
+@article{LPTRG13,
+  doi = {10.1103/physrevx.3.031006},
+  year = {2013},
+  month = jul,
+  publisher = {American Physical Society ({APS})},
+  volume = {3},
+  number = {3},
+  author = {Charles Ci Wen Lim and Christopher Portmann and Marco Tomamichel and Renato Renner and Nicolas Gisin},
+  title = {Device-Independent Quantum Key Distribution with Local Bell Test},
+  journal = {Physical Review X}
+}
 
 
 
